--- a/dp.css
+++ b/dp.css
@@ -1,6 +1,7 @@
 body {
     font-family: monospace;
     font-weight: 600;
+    background-color: black;
 }
 
 .main-div {
@@ -12,6 +13,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: white;
 }
 
 .contents {
