--- a/dp.css
+++ b/dp.css
@@ -1,11 +1,11 @@
 body {
     font-family: monospace;
     font-weight: 600;
-    background-color: black;
+    /*background-color: black;*/
 }
 
 .main-div {
-    width: 500px;
+    /*width: 500px;*/
     padding: 20px;
     border-radius: 25px;
     margin-left: auto;
@@ -56,5 +56,14 @@ table td {
 .footer {
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: 20px;
+}
+
+#result {
+    margin-top: 20px;
+}
+
+.result-and-btn-div {
+    display: flex;
+    flex-direction: column;
 }
