--- a/dp.css
+++ b/dp.css
@@ -2,6 +2,7 @@ body {
     font-family: monospace;
     font-weight: 600;
     /*background-color: black;*/
+    background-color: #171616;
 }
 
 .main-div {
@@ -13,7 +14,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: white;
+    /*background-color: white;*/
 }
 
 .contents {
@@ -26,23 +27,30 @@ table td {
 
 #compute {
     margin-bottom: 10px;
-    background-color: #5b5b5b;
+    background-color: #242222;
     color: white;
     height: 40px;
     width: 325px;
     font-size: 20px;
     border-radius: 4px;
     margin-top: 30px;
+    border: 1px solid #767676;
 }
 
 #principal {
     height: 25px;
     width: 190px;
+    background-color: #171616;
+    color: white;
+    border: 1px solid #767676;
 }
 
 #years {
     height: 35px;
     width: 200px;
+    background-color: #171616;
+    color: white;
+    border: 1px solid #767676;
 }
 
 .labels {
