--- a/dp.css
+++ b/dp.css
@@ -15,6 +15,7 @@ body {
     flex-direction: column;
     align-items: center;
     /*background-color: white;*/
+    color: white;
 }
 
 .contents {
