--- a/dp.css
+++ b/dp.css
@@ -28,7 +28,7 @@ table td {
     background-color: #242222;
     color: white;
     height: 40px;
-    width: 325px;
+    width: 100%;
     font-size: 20px;
     border-radius: 4px;
     margin-top: 30px;
@@ -41,12 +41,12 @@ table td {
 }
 
 #principal {
-    height: 25px;
-    width: 190px;
+    height: 31px;
     background-color: #242222;
     color: white;
     border: 1px solid #767676;
     border-radius: 4px;
+    padding-left: 4px;
 }
 
 #principal:focus {
@@ -59,7 +59,7 @@ table td {
 
 #years {
     height: 35px;
-    width: 200px;
+    width: 100%;
     background-color: #242222;
     color: white;
     border: 1px solid #767676;
@@ -95,4 +95,10 @@ table td {
 .result-and-btn-div {
     display: flex;
     flex-direction: column;
+}
+
+.interest-rate-td {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
 }
